# hippo

./: .gitignore  README.md  env.example  project.toml  pyproject.toml  requirements.txt  structure.txt  test_eumetsat_failfast.py
sat_ingest/: adapter_registry.py
sat_ingest/adapters/: __init__.py
sat_ingest/adapters/airbus_api/: __init__.py  client.py
sat_ingest/adapters/asf_vertex/: __init__.py  client.py
sat_ingest/adapters/asi_hub/: __init__.py  client.py
sat_ingest/adapters/aws_open_data/: __init__.py  client.py
sat_ingest/adapters/canadian_gov_api/: __init__.py  client.py
sat_ingest/adapters/cdse_stac/: __init__.py  client.py  mapper.py  token.py
sat_ingest/adapters/dlr_hub/: __init__.py  client.py
sat_ingest/adapters/eumetsat_coda/: __init__.py  client.py  mapper.py  token.py
sat_ingest/adapters/gee/: __init__.py  client.py
sat_ingest/adapters/iceye/: __init__.py  client.py
sat_ingest/adapters/inpe/: __init__.py  client.py
sat_ingest/adapters/jaxa/: __init__.py  client.py
sat_ingest/adapters/jma_himawaricast/: __init__.py  client.py
sat_ingest/adapters/laads_daac/: __init__.py  client.py
sat_ingest/adapters/nasa_ges_disc/: __init__.py  client.py
sat_ingest/adapters/noaa_class/: __init__.py  client.py
sat_ingest/cli/: __main__.py
sat_ingest/core/: adapter_registry.py  auth.py  geometry.py  http.py  models.py  paginate.py  search.py  support_matrix.py  utils.py
sat_ingest/utils/: __init__.py  geometry.py
test_aoi_big/: aoi.dbf  aoi.geojson  aoi.shp  aoi.shx
tests/contract/: test_adapter_contract.py
(+25 files in other folders)
