[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-ingest"
version = "0.1.0"
description = "Satellite data ingestion engine with per-source adapters"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.28",
  "tenacity>=8.2,<9",
  "pydantic>=2.7,<3",
  "shapely>=2.0,<3",
  "pyproj>=3.6,<4",
  "tqdm>=4.66,<5",
  "click>=8.1,<9",
  "Pillow>=10,<11",
  "python-dotenv>=1.0,<2",
]

[project.scripts]
sat = "sat_ingest.cli.__main__:main"

[tool.setuptools]
include-package-data = true

# tell setuptools to include our package
[tool.setuptools.packages.find]
where = ["."]
include = ["sat_ingest*"]
